remove obsolete dependencies use module invocation in run.sh